# Emby.MCP

./: .gitignore  Example Claude Transcript.md  README.md  emby_mcp_server.py  lib_emby_debugging.py  lib_emby_functions.py  pyproject.toml
hotfixes/emby/: configuration.py  user_service_api.py
